tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/multiline-bad-escape-3.stderr
TOML parse error at line 2, column 11
  |
2 | k = """t\ """
  |           ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
